2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/list.py:
	Allow editing ListForm rows with forbidden columns.

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/presentation/field.py:
	Let PresentedRow.editable returns False for columns without proper permissions.

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Don't try to store forbidden fields in RecordForm.

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* lib/pytis/form/form.py:
	Don't validate disabled form fields.

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Small output clarification in genmenu.

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Avoid storing multiple access rights records in genmenu.

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Don't store multiple instances of the same form access rights in genmenu.
	

2009-06-03  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fix variable name conflict in genmenu --check.

2009-06-02  Milan Zamazal  <pdm@brailcom.org>

	* db/db_common.py:
	New aggregate space_concat.

2009-05-27  Milan Zamazal  <pdm@brailcom.org>

	* db/db_pytis_menu.py:
	Compute column access rights for the database summary table

2009-05-26  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Basic --check functionality in genmenu

2009-05-26  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Don't process access rights of private specifications in genmenu

2009-05-26  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Actually store access rights for all found specifications

2009-05-25  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Fix in "hidden" action reporting in genmenu

2009-05-25  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py:
	Store access rights for RUN_FORM and NEW_RECORD actions in genmenu

2009-05-25  Milan Zamazal  <pdm@brailcom.org>

	* tools/genmenu.py: